--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,13 +5,13 @@
         <DefineConstants>FABLE_COMPILER</DefineConstants>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="..\..\paket-files\github.com\gretmn102\FulmaExtensions\src\InputTags.fs" />
         <None Include="index.html" />
         <None Include="paket.references" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
     <ItemGroup>
+        <ProjectReference Include="..\..\paket-files\github.com\gretmn102\FulmaExtensions\src\FulmaExtensions.fsproj" />
         <ProjectReference Include="..\Shared\Shared.fsproj" />
     </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets" />
