--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -7,12 +7,12 @@
     <ItemGroup>
         <None Include="index.html" />
         <None Include="paket.references" />
+        <Compile Include="..\Shared\Shared.fs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\paket-files\github.com\gretmn102\FulmaExtensions\src\FulmaExtensions.fsproj" />
-        <ProjectReference Include="..\Shared\Shared.fsproj" />
     </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
